# HypercubeHopfield

./: .gitignore  CLAUDE.md  CMakeLists.txt  Diagnostics.h  HopfieldNetwork.cpp  HopfieldNetwork.h  README.md  ThreadPool.h  main.cpp
.github/workflows/: wheels.yml
cmake/: HypercubeHopfieldConfig.cmake.in
diagnostics/: CapacityProbe.h  CapacityProbe.md  DiagnosticHelpers.h  Diagnostics.h  EnergyMonotonicity.md  NoiseRecall.h  NoiseRecall.md  OverlapMetrics.h  OverlapMetrics.md  ParameterSweep.h  ParameterSweep.md
docs/: CPP_SDK.md  FutureWork.md  HopfieldNetwork.md  Python_SDK.md
examples/: AutoAssociativeDemo.cpp  HeteroAssociativeDemo.cpp
python/: CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
python/hypercube_hopfield/: __init__.py
python/tests/: test_basic.py
